--- a/index.html
+++ b/index.html
@@ -61,9 +61,8 @@
     </section>
 
     <button onclick="topFunction()" id="myBtn" title="Go to top">
-        <span class="icon">
-            <i class="fa fa-arrow-circle-up"></i>
-        </span>
+        <i class="fa fa-arrow-up"></i>
+        <span class="px-1">Top</span>
     </button>
 
     <script src="script.js"></script>
