--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
         <span class="px-1">Top</span>
     </button>
 
+    <footer class="footer">
+        <div class="content has-text-centered">
+            <p>
+
+            </p>
+        </div>
+    </footer>
+
     <script src="script.js"></script>
 
 </body>
