--- a/index.html
+++ b/index.html
@@ -65,10 +65,18 @@
         <span class="px-1">Top</span>
     </button>
 
-    <footer class="footer">
+    <footer class="footer pt-5 pb-6">
         <div class="content has-text-centered">
-            <p>
-
+            <a class="m-2" href="https://www.linkedin.com/in/shaw8wit" target="_blank">
+                <i class="fa fa-2x fa-linkedin"></i>
+            </a>
+            <a class="m-2" href="https://www.github.com/shaw8wit" target="_blank">
+                <i class="fa fa-2x fa-github-alt"></i>
+            </a>
+            <p class="pt-1">Copyright © Shouvit Pradhan,
+                <a href="https://xmeme-shaw8wit.herokuapp.com/swagger-ui" target="_blank">
+                    Swagger UI
+                </a>
             </p>
         </div>
     </footer>
