--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         <span class="px-1">Top</span>
     </button>
 
+    <!-- * Snackbar -->
+    <div id="snackbar"></div>
+
     <!-- * Footer for some extra info -->
     <footer class="footer pt-5 pb-6">
         <div class="content has-text-centered">
