--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <i class="fa fa-2x fa-github-alt"></i>
             </a>
             <p class="pt-2">Copyright © <strong>Shouvit Pradhan</strong>,
-                <a href="https://xmeme-shaw8wit.herokuapp.com/swagger-ui" target="_blank"
+                <a href="https://xmeme-shaw8wit.herokuapp.com/swagger-ui/" target="_blank"
                     title="Go to Swagger UI of the API's used">
                     Swagger UI
                 </a>
